[package]
name = "ra-enclave"
version = "0.1.0"
authors = ["Natnatee Dokmai <ndokmai@indiana.edu>"]
edition = "2018"

[features]
example = ["byteorder"]
default = ["byteorder", "verbose"]
verbose = []

[dependencies]
bincode = "1.2.1"
sgx-isa = { version = "0.3.1", features = ["sgxstd"] }
sgx-crypto = { path = "../sgx-crypto" }
ra-common = { path = "../ra-common" }
byteorder = { version = "1.3.2", optional = true }
mbedtls = { git = "https://github.com/grief8/rust-mbedtls.git", default-features = false, features = ["sgx"] }
http-serde = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
http = "0.2"
regex = "1.3.3"
serde_json = "1.0"
percent-encoding = "2.1.0"
base64 = "0.11.0"

[[example]]
name = "tls-enclave"
test = false
required-features = ["example"]
